--- a/conf/application.conf
+++ b/conf/application.conf
@@ -36,10 +36,13 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-# db.default.driver=org.h2.Driver
-# db.default.url="jdbc:h2:mem:play"
-# db.default.user=sa
-# db.default.password=""
+#db.default.driver=org.h2.Driver
+#db.default.url="jdbc:h2:mem:play"
+db.default.driver=org.postgresql.Driver
+db.default.url="postgres://vhqxfylfyxtjar:nTWK0ORrKvkcQ0r4_nM17JZOtX@ec2-54-83-43-49.compute-1.amazonaws.com:5432/dfa1vscbsfk5v5"
+db.default.url=${?DATABASE_URL}
+db.default.username=${?DATABASE_USER}
+db.default.password=${?DATABASE_PASSWORD}
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
@@ -69,4 +72,7 @@ logger.play=INFO
 
 # Logger provided to your application:
 logger.application=DEBUG
+
+applyEvolutions.default=true
+applyDownEvolutions.default=true
 
