--- a/conf/application.conf
+++ b/conf/application.conf
@@ -40,7 +40,7 @@ application.langs="en"
 #db.default.url="jdbc:h2:mem:play"
 #
 db.default.driver=org.postgresql.Driver
-db.default.url="postgres://vhqxfylfyxtjar:nTWK0ORrKvkcQ0r4_nM17JZOtX@ec2-54-83-43-49.compute-1.amazonaws.com:5432/dfa1vscbsfk5v5"
+db.default.url="postgres://euslqweoefralp:nu7gk-QvKmFgSU1TID2x76pGxB@ec2-54-221-243-6.compute-1.amazonaws.com:5432/d4ucbm7v03sfqg"
 db.default.url=${?DATABASE_URL}
 db.default.username=${?DATABASE_USER}
 db.default.password=${?DATABASE_PASSWORD}
