--- a/conf/application.conf
+++ b/conf/application.conf
@@ -36,14 +36,14 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-#db.default.driver=org.h2.Driver
-#db.default.url="jdbc:h2:mem:play"
+db.default.driver=org.h2.Driver
+db.default.url="jdbc:h2:mem:play"
 #
-db.default.driver=org.postgresql.Driver
-db.default.url="postgres://euslqweoefralp:nu7gk-QvKmFgSU1TID2x76pGxB@ec2-54-221-243-6.compute-1.amazonaws.com:5432/d4ucbm7v03sfqg"
-db.default.url=${?DATABASE_URL}
-db.default.username=${?DATABASE_USER}
-db.default.password=${?DATABASE_PASSWORD}
+#db.default.driver=org.postgresql.Driver
+#db.default.url="postgres://euslqweoefralp:nu7gk-QvKmFgSU1TID2x76pGxB@ec2-54-221-243-6.compute-1.amazonaws.com:5432/d4ucbm7v03sfqg"
+#db.default.url=${?DATABASE_URL}
+#db.default.username=${?DATABASE_USER}
+#db.default.password=${?DATABASE_PASSWORD}
 #
 # You can expose this datasource via JNDI if needed (Useful for JPA)
 # db.default.jndiName=DefaultDS
